// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render type 1`] = `
<i
  className="cf-1q8ut4e"
>
  <span
    className="cf-1u9fru1"
  >
    Info-Sign
  </span>
</i>
`;

exports[`should render type/border/spin/muted/white 1`] = `
<i
  className="cf-5cbob6"
>
  <span
    className="cf-1u9fru1"
  >
    Info-Sign
  </span>
</i>
`;

exports[`should render type/size 1`] = `
<i
  className="cf-1q8ut4e"
>
  <span
    className="cf-1u9fru1"
  >
    Info-Sign
  </span>
</i>
`;
